# RP2040-FreeRTOS

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  deploy.sh
App/: CMakeLists.txt  main.c  main.h
App-IRQs/: CMakeLists.txt  ht16k33.cpp  ht16k33.h  i2c_utils.cpp  i2c_utils.h  main.cpp  main.h  mcp9808.cpp  mcp9808.h  utils.cpp  utils.h
App-Schedules/: CMakeLists.txt  ht16k33.cpp  ht16k33.h  i2c_utils.cpp  i2c_utils.h  main.cpp  main.h  mcp9808.cpp  mcp9808.h  utils.cpp  utils.h
App-Scheduling/: CMakeLists.txt  ht16k33.cpp  ht16k33.h  i2c_utils.cpp  i2c_utils.h  main.cpp  main.h  mcp9808.cpp  mcp9808.h  utils.cpp  utils.h
App-Template/: CMakeLists.txt  main.c  main.h
App-Timers/: CMakeLists.txt  main.cpp  main.h
Common/: ht16k33.cpp  ht16k33.h  i2c_utils.cpp  i2c_utils.h  mcp9808.cpp  mcp9808.h  utils.cpp  utils.h
Config/: FreeRTOSConfig.h
Scripts/: increment.py
rp2040.xcworkspace/: contents.xcworkspacedata
tools/picotool-subbuild/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
tools/picotool-subbuild/picotool-populate-prefix/src/picotool-populate-stamp/: picotool-populate-gitinfo.txt  picotool-populate-update-info.txt
tools/picotool-subbuild/picotool-populate-prefix/tmp/: picotool-populate-gitclone.cmake  picotool-populate-gitupdate.cmake  picotool-populate-mkdirs.cmake
